Fix for the menu bar collapsing

--- a/client/stylesheets/layout/layout-responsive.css
+++ b/client/stylesheets/layout/layout-responsive.css
@@ -1,4 +1,4 @@
-@media (max-width: 990px) {
+@media (max-width: 100px) {
 	/* Navigation */
 	header#topNav div.nav-main-collapse,
 	header#topNav div.nav-main-collapse.in {
